<resources>
    <string name="app_name">My Application</string>
    <string name="i_num1">Ingrese num1:</string>
    <string name="i_num2">Ingrese num2:</string>
    <string name="txt_calcular">Calcular</string>
    <string name="calcular">Calcular</string>
    <string name="ingresar_num2">Ingresar num2:</string>
    <string name="ingresar_num1">Ingresar num1:</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
</resources>